Bug 439183 - kwin wayland with latest activity integration doesn't "remember current virtual desktop used" when switching
Summary: kwin wayland with latest activity integration doesn't "remember current virtu...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: activities (other bugs)
Version First Reported In: 5.8.9
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
: 435743 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-26 14:08 UTC by Alexandre Pereira
Modified: 2023-05-02 08:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Pereira 2021-06-26 14:08:20 UTC
SUMMARY

Hi!

Thanks for the latest activity integration on Wayland! Its awesome to activities working like on x11.

I use the option in Activities->Switching: "Current virtual desktop: Remember for each activity". But it doesn't seem to be working


STEPS TO REPRODUCE
1. Be on Virtual desktop 1 on Activity A Switch to Activity B
2. Be on Virtual desktop 2 on Activity B
3. Switch back to Activity A

OBSERVED RESULT
Its on Virtual desktop 2 like Activity B

EXPECTED RESULT
Should be on Virtual desktop 1, since it was the current used on Activity A

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bacteria 2021-06-28 05:07:36 UTC
I can reproduce this too.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83
Qt Version: 5.15.2
Comment 2 Paul Worrall 2021-07-08 11:56:13 UTC
I can also reproduce:

Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.3
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.8.0-59-generic (64-bit)
Graphics Platform: Wayland
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Comment 3 Vlad Zahorodnii 2021-07-19 08:57:04 UTC
Yeah, there are still some missing activity features that need to be implemented on wayland.
Comment 4 David Edmundson 2021-09-02 06:48:04 UTC
Git commit 73e9cb57aefdd93ef39d97e9bfe71fa9f094a0a1 by David Edmundson, on behalf of David Redondo.
Committed on 01/09/2021 at 23:17.
Pushed by davidre into branch 'master'.

desktop switch support for wayland

While KWindowSystem does not support virtual desktops on wayland
we can just use the dbus interface of kwin.
FIXED-IN:5.23

M  +29   -8    src/service/plugins/virtualdesktopswitch/VirtualDesktopSwitchPlugin.cpp

https://invent.kde.org/plasma/kactivitymanagerd/commit/73e9cb57aefdd93ef39d97e9bfe71fa9f094a0a1
Comment 5 Alexandre Pereira 2021-09-02 08:52:27 UTC
just updated and tested it, seem to be working great !!!

Thank you !! awesome !!
Comment 6 Oded Arbel 2021-09-26 21:25:16 UTC
*** Bug 435743 has been marked as a duplicate of this bug. ***
Comment 7 Oded Arbel 2023-05-02 07:54:49 UTC
Currently, on Plasma 5.27.4, I still get this issue on Wayland - it sometimes works and some times doesn't, in the same session.

My workflow is that I have YouTube playing something on VD 4 in the activity "Personal", while I work on the activity "Work", switching between VDs 1 and 2. I then sometimes switch back and forth between the "Work" activity and "Personal" activity, when I hear something  going on in the YouTube player that I would like to also see - and a lot of times - possibly 50% of the time - when I switch to "Personal" I find it in VD 1 or 2 and I have to manually go back to 4, or when I switch to "Work" I find it in VD 4 and I have to switch manually back to where I was working.