desktop switch support for wayland

While KWindowSystem does not support virtual desktops on wayland
we can just use the dbus interface of kwin.
BUG:439183
FIXED-IN:5.23